<resources>
    <string name="app_name" translatable="false">AlgoViz</string>
    <string name="graph">Graph</string>
    <string name="pathfinding">Pathfinding</string>
    <string name="data_structures">Data Structures</string>
    <string name="stack">Stack</string>
    <string name="queue">Queue</string>
    <string name="push">Push</string>
    <string name="pop">Pop</string>
    <string name="enqueue">Enqueue</string>
    <string name="dequeue">Dequeue</string>
    <string name="peek">Peek</string>
    <string name="sorting">Sorting</string>
    <string name="searching">Searching</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="sort">Sort</string>
    <string name="random_data">Random Data</string>
    <string name="custom_data">Custom Data</string>
    <string name="searching_sorting">Searching/Sorting</string>
    <string name="bubble_sort">Bubble Sort</string>
    <string name="selection_sort">Selection Sort</string>
    <string name="linear_search">Linear Search</string>
    <string name="binary_search">Binary Search</string>
    <string name="search">Search</string>

    <string name="select_starting_point">Select Starting Point</string>
    <string name="select_destination_point">Select Destination Point</string>
    <string name="solution_cost">Solution Cost:</string>
    <string name="destination_unreachable">Destination Unreachable</string>
    <string name="algorithm">Algorithm</string>
    <string name="heuristics">Heuristics</string>
    <string name="reset">Reset</string>
    <string-array name="pathfinding_algorithms">
        <item>AStar</item>
        <item>Greedy Best First Search</item>
        <item>BFS</item>
        <item>Dijkstra</item>
    </string-array>

    <string-array name="pathfinding_heuristics">
        <item>Manhattan</item>
        <item>Octile</item>
        <item>Chebyshev</item>
        <item>Euclidean</item>
    </string-array>

    <string name="shortest_path">Shortest Path</string>
    <string name="graph_traversal">Graph Traversal</string>
    <string name="bfs">BFS</string>
    <string name="dfs">DFS</string>
    <string name="traverse">Traverse</string>
</resources>