<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".ui.graph.GraphTraversalFragment">

    <com.jaytalekar.algoviz.ui.graph.GraphView
        android:id="@+id/graph_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/royal_purple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bfs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/bfs"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_dfs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dfs"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_traverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/traverse"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/reset"
            android:gravity="center"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>