<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".ui.searchingsorting.SortingActivity">

    <com.jaytalekar.algoviz.ui.searchingsorting.SearchBarGraphWidget
        android:id="@+id/searchBarGraphView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/graph_baseline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layoutDescription="@xml/simple_scene" />

    <View
        android:id="@+id/graph_baseline"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginHorizontal="12dp"
        android:background="@color/royal_purple"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_linear_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="8dp"
        android:text="@string/linear_search"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_binary_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph_baseline" />

    <TextView
        android:id="@+id/tv_binary_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="8dp"
        android:text="@string/binary_search"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_linear_search"
        app:layout_constraintTop_toBottomOf="@+id/graph_baseline" />

    <TextView
        android:id="@+id/tv_random_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="8dp"
        android:text="@string/random_data"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_linear_search" />

    <EditText
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="8dp"
        android:hint="@string/search"
        android:gravity="center"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="24sp"
        android:imeOptions="actionDone"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_random_data"
        app:layout_constraintTop_toBottomOf="@+id/tv_binary_search" />

</androidx.constraintlayout.widget.ConstraintLayout>