<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".ui.searchingsorting.SortingFragment">

    <com.jaytalekar.algoviz.ui.searchingsorting.BarGraphView
        android:id="@+id/barGraphView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/graph_baseline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/graph_baseline"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginHorizontal="12dp"
        android:background="@color/royal_purple"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="8dp"
        android:text="@string/sort"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_random_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph_baseline" />

    <TextView
        android:id="@+id/tv_random_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="8dp"
        android:text="@string/random_data"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_sort"
        app:layout_constraintTop_toBottomOf="@+id/graph_baseline" />

    <TextView
        android:id="@+id/tv_add_custom_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="8dp"
        android:text="@string/custom_data"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_random_data"
        app:layout_constraintStart_toEndOf="@+id/tv_sort"
        app:layout_constraintTop_toBottomOf="@+id/barGraphView" />


</androidx.constraintlayout.widget.ConstraintLayout>